<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>marathon_log_nodes</name>
  <version>0.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="lorena.bajo@urjc.es">Lorena Bajo Rebollo</maintainer>
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_lifecycle</build_depend>
  <build_depend>ament_index_cpp</build_depend>
  <build_depend>nav2_msgs</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>system_modes</build_depend>
  <build_depend>builtin_interfaces</build_depend>


  <exec_depend>system_modes</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
